# sytadin2mqtt

./: .gitignore  Cargo.toml  README.md  requirements.txt  sytadin2mqtt.py
src/: configuration.rs  main.rs  sytadin.rs
