[package]
name = "sytadin2mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking"] }
select = "0.6.1"
regex = "1.11.1"
serde_json = "1.0.140"
paho-mqtt = {version = "0.13.3", default-features = false, features = ["bundled"]}
rust-ini = "0.21.1"
argparse = "0.2.2"
